syntax = "proto3";

option csharp_namespace = "ShortURLGenerator.Grpc.Services";

enum ResponseStatus {
    OK = 0;
    UNAUTHORIZED = 1;
    BAD_REQUEST = 2;
    NOT_FOUND = 3;
    CONFLICT = 4;
}

message Response {
    ResponseStatus ResponseStatus = 1;
    optional string Error = 2;
}

message PageInfo {
    int32 index = 1;
    int32 count = 2;
}

