syntax = "proto3";

option csharp_namespace = "Grpc.Services";

import "urldto.proto";

service UrlService {
    rpc Generate (SourceUriDto) returns (UrlResponseDto);
}